<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_color">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:shadowColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back_arrow_button" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="30dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/your_bmi_result"
                android:textAppearance="@style/UserName"
                />

            <View
                android:id="@+id/rectangle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="140dp"
                android:background="@drawable/splash_style_background" />


            <ImageView
                android:id="@+id/img_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:src="@drawable/normal_weight_score"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/display_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="195dp"
                android:text="@string/_22_70"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:maxLength="5"
                android:ellipsize="end"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="218dp"
                android:text="score"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:ellipsize="end"
               />


            <androidx.cardview.widget.CardView
                android:id="@+id/score_card"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/img_score"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:elevation="5dp"
                app:cardBackgroundColor="#CBE6F9"
                app:cardCornerRadius="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1.5dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="3dp"
                            android:text="@string/weight"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/weight_result_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="4dp"
                            android:text="@string/_60"
                            android:textSize="20sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="3dp"
                            android:text="@string/height"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/height_result_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="4dp"
                            android:text="@string/_5"
                            android:textSize="20sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="3dp"
                            android:text="@string/inches"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/inches_result_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="4dp"
                            android:text="@string/_4"
                            android:textSize="20sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="3dp"
                            android:text="Gender"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/gender_result_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="4dp"
                            android:text="@string/none"
                            android:textStyle="normal"
                            android:textSize="20sp" />


                    </LinearLayout>


                </LinearLayout>

                <View
                    android:id="@+id/line_1"
                    android:layout_width="2dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/img_score"
                    android:layout_marginStart="79dp"
                    android:layout_marginTop="7dp"
                    android:background="#C1CFDD" />

                <View
                    android:id="@+id/line"
                    android:layout_width="2dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/img_score"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="7dp"
                    android:background="#C1CFDD" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="2dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/img_score"
                    android:layout_marginStart="238dp"
                    android:layout_marginTop="7dp"
                    android:background="#C1CFDD" />


            </androidx.cardview.widget.CardView>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/score_card"
                android:layout_margin="25dp"
                android:src="@drawable/weight_chart_image" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>