<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/home_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="50dp"
                android:maxLines="1"
                android:gravity="center"
                android:ellipsize="end"
                android:text="@string/hi_eyaqub_ali"
                android:textAppearance="@style/Name"
                tools:ignore="HardcodedText"
                />

            <View
                android:id="@+id/rectangle"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="150dp"
                android:background="@drawable/splash_style_background" />


            <LinearLayout
                android:id="@+id/male_layout"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="190dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icons8_male"
                    android:layout_width="79dp"
                    android:layout_height="79dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/icons_male"
                    android:importantForAccessibility="yes"
                    android:contentDescription="@string/male_image_icon" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icons_male"
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/female_user"
                    android:contentDescription="@string/female_image_icon"
                    android:importantForAccessibility="no"
                    />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_below="@id/male_layout"
                >

                <RadioButton
                    android:id="@+id/MRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male_button"
                    android:layout_marginEnd="55dp"
                    />

                <RadioButton
                    android:id="@+id/FRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female_button"
                    android:layout_marginStart="40dp"
                    />

            </RadioGroup>


            <LinearLayout
                android:id="@+id/lId"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/radio_group"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:text="Weight"
                    android:textSize="24sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_weight_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="Enter Weight (KG)"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lId1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/lId"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:text="Height"
                    android:textSize="24sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_height_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/enter_height_fit"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lId2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/lId1"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:text="@string/inche"
                    android:textSize="24sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_inches_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_inches"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/enter_height_inchi"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculate_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="55dp"
                android:background="@drawable/button_backgroun"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:shadowColor="@color/black"
                android:text="calculate"
                android:textSize="18sp" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>